# trivia

./: .gitmodules
C/: CMakeLists.txt  test_trivia.cpp
C++/: CMakeLists.txt  TestTrivia.cpp
python/: test_trivia.py
